# femras

./: .gitignore  LICENSE  README.md  pyproject.toml
api/: main.py
docs/: manual_usuario_en.md  manual_usuario_es.md  prd_edge_supports.md  prd_femras.md  prd_rasfem.md  teoria_modelo.md
examples/: presa_ras.yaml  viga_rilem.yaml
examples/legacy/: presa_ras.py  viga_rilem.py
femras/: __init__.py  analysis.py  backend.py  cli.py  config.py  postprocess.py  run.py  solver.py  stages.py  timefunc.py
femras/elements/: base.py  t3.py
femras/mesh/: polygon.py
rasfem/: __init__.py  analysis.py  assembly.py  backend.py  cli.py  config.py  damage.py  loads.py  materials.py  ras.py  run.py  solver.py  timefunc.py
rasfem/elements/: __init__.py  q4.py
rasfem/mesh/: __init__.py  polygon.py  structured.py
tests/: test_edge_loads.py  test_legacy_equivalence.py  test_presa_regression.py  test_unit_model.py  test_viga_regression.py
web/: app.js  editor.js  index.html  results.js  style.css
